<resources>
    <string name="app_name">wnacg</string>
    <string name="web_name">EX漫画</string>
    <string name="bmob_id">dca8f84ac75cdbd2f20e9e09bf034e63</string>

    <!--menu-->
    <!--nav-->
    <!--tab-->
    <!--intent-->
    <!--Activity Transition-->
    <!--net-->
    <!--other-->

    <!--detail-->
    <!--gallery-->

    <!--menu-->
    <string name="menu_search">查找</string>
    <string name="search_null">搜索内容不允许为空</string>
    <string name="search_mode">搜索方式</string>
    <string name="search_mode_name">按名字查找</string>
    <string name="search_mode_tag">按TAG查找</string>
    <string name="search_mode_name_tip">请输入漫画名字</string>
    <string name="search_mode_tag_tip">请输入TAG名字</string>

    <!--nav-->
    <string name="nav_header_username_default">未登录</string>
    <string name="nav_menu_message">我的消息</string>
    <string name="nav_menu_local">本地漫画</string>
    <string name="nav_group_other">其他</string>
    <string name="nav_menu_about">关于</string>
    <string name="nav_menu_setting">设置</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>

    <!--tab-->
    <string name="tab_item_collection">收藏</string>
    <string name="tab_item_history">历史</string>
    <string name="tab_item_download">下载</string>

    <!--intent-->
    <string name="intent_send_link">发送神秘♂链接</string>
    <string name="intent_send_pic">发送神秘♂图片</string>

    <!--Activity Transition-->
    <string name="pair_home2detail_image">从HomeFrag共享缩略图到DetailAct</string>

    <!--net-->
    <string name="http_get_key_albums" >albums</string>
    <string name="http_get_key_index"  >index</string>
    <string name="http_get_key_page"   >page</string>
    <string name="http_get_key_sname"  >sname</string>
    <string name="http_get_key_tag"    >tag</string>
    <string name="http_get_key_cate"   >cate</string>
    <string name="http_get_key_photos" >photos</string>
    <string name="http_get_key_aid"    >aid</string>
    <string name="http_get_key_gallery">gallery</string>

    <string name="loading">正在加载中…</string>
    <string name="loading_fail">加载失败,请重试…</string>
    <string name="loading_no_more">没有更多数据</string>
    <string name="GFW_warning">被墙了!!!</string>
    <string name="Connect_warning">上不了网!!!</string>
    <string name="reLoading">重新加载</string>

    <!--other-->
    <string name="unit_pic">页</string>
    <string name="permission_no">没有获取权限</string>
    <string name="placeholder_comic_title">漫画标题</string>
    <string name="placeholder_comic_time">上传时间</string>
    <string name="placeholder_comic_pic_num">漫画页数</string>
    <string name="placeholder_comic_pic_process">888</string>
    <string name="placeholder_comic_pic_divider">/</string>
    <string-array name="cate_array">
        <!-- 0 --><item>最新更新</item>
        <!-- 1 --><item>同人志汉化</item>
        <!-- 2 --><item>CG画集</item><!--同人志CG画集-->
        <!-- 3 --><item>Cos</item><!--同人志cos-->
        <!-- 4 --><item>null</item>
        <!-- 5 --><item>同人志</item>
        <!-- 6 --><item>单行本</item>
        <!-- 7 --><item>杂志</item>
        <!-- 8 --><item>null</item>
        <!-- 9 --><item>单行本汉化</item>
        <!--10 --><item>单篇汉化</item><!--单行本-->
        <!--11 --><item>null</item>
        <!--12 --><item>同人日语</item><!--同人志日语-->
        <!--13 --><item>单行本日语</item>
        <!--14 --><item>杂志日语</item>
    </string-array>


    <!--detail-->
    <string name="detail_updater">上传者:</string>
    <string name="detail_pic_num">页数:</string>
    <string name="detail_tag">Tag:</string>
    <string name="detail_introduce">简介:</string>
    <string name="detail_create_time">上传时间:</string>
    <string name="detail_btn_download">下载</string>
    <string name="detail_btn_read">阅读</string>
    <string name="detail_btn_collection">收藏</string>
    <string name="detail_btn_share">分享</string>

    <!--gallery-->
    <string name="gallery_detail">详情</string>
    <string name="gallery_download">下载</string>
    <string name="gallery_share">分享</string>
    <string name="gallery_favourite">收藏</string>
    <string name="gallery_light_auto">自动</string>
    <string name="gallery_light">亮度</string>
    <string name="gallery_screen_rotation">亮度</string>
    <string name="gallery_dialog_detail_title">漫画Id:</string>
    <string name="gallery_dialog_detail_positive">确定</string>
    <string name="gallery_dialog_detail_clip_tip">已复制到剪贴板</string>
    <string name="gallery_share_single_pic">正在加载图片,准备分享…</string>




</resources>
