<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.ahao.androidlib.ui.widght.recyclerView.GalleryView
        android:id="@+id/read_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <RelativeLayout
        android:id="@+id/read_layout_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/background_light"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/read_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_back_dark_24dp" />

            <TextView android:id="@+id/read_text_title"
                style="@style/TextAppearance.Dark.GalleryTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/placeholder_comic_title" />

            <TextView android:id="@+id/read_btn_detail"
                style="@style/TextAppearance.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_gallery_info_24dp"
                android:text="@string/gallery_detail" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/background_light"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium">
                <TextView
                    android:id="@+id/read_text_pic_current"
                    style="@style/TextAppearance.Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_comic_pic_process" />
                <TextView
                    style="@style/TextAppearance.Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_comic_pic_divider" />

                <TextView
                    android:id="@+id/read_text_pic_all"
                    style="@style/TextAppearance.Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_comic_pic_process" />
            </LinearLayout>


            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/read_seek_reading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/read_btn_screen"
                style="@style/TextAppearance.Dark.IconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_gallery_screen_rotation_24dp"
                android:text="@string/gallery_screen_rotation"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/gallery_left_right_width"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/read_layout_right"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/read_layout_right"
            android:background="@color/background_light"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/read_check_autoLight"
                style="@style/TextAppearance.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_light_auto"/>
            <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                    android:id="@+id/read_seek_light"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:seekBarRotation="CW270" />
            </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>

            <TextView
                android:layout_width="wrap_content"
                style="@style/TextAppearance.Dark"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/gallery_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/read_layout_right"
            android:layout_width="@dimen/gallery_left_right_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/background_light"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/read_btn_download"
                style="@style/TextAppearance.Dark.IconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_gallery_download_24dp"
                android:text="@string/gallery_download"
                />

            <TextView
                android:id="@+id/read_btn_share"
                style="@style/TextAppearance.Dark.IconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_gallery_share_24dp"
                android:text="@string/gallery_share"
                />

            <TextView
                android:id="@+id/read_btn_favorite"
                style="@style/TextAppearance.Dark.IconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_gallery_favorite_24dp"
                android:text="@string/gallery_favourite"
                />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>