<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_card"
    android:layout_marginLeft="@dimen/margin_card"
    android:layout_marginRight="@dimen/margin_card"
    android:layout_marginTop="@dimen/margin_search_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/search_mode"
            android:textColor="@color/colorAccent" />

        <RadioGroup
            android:id="@+id/search_mode_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:checkedButton="@+id/search_mode_name"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/search_mode_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_mode_name" />

            <RadioButton
                android:id="@+id/search_mode_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_mode_tag" />
        </RadioGroup>
    </LinearLayout>
</android.support.v7.widget.CardView>