<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_large_height">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="?attr/colorPrimary"
            app:title="@string/web_name">

            <uk.co.senab.photoview.PhotoView
                android:id="@+id/detail_image_head"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="0.6" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/detail_scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_small">

            <TextView
                android:id="@+id/detail_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="漫画名" />

            <LinearLayout
                android:id="@+id/detail_simpleMessage_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_text_title"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_image_thumb"
                    style="@style/Image.Item.Thumb"
                    android:layout_width="@dimen/image_thumb_width"
                    android:layout_height="@dimen/image_thumb_height"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/divider_normal"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_medium"
                    android:showDividers="middle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/detail_updater" />

                        <TextView
                            android:id="@+id/detail_text_updater"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:singleLine="true"
                            android:text="@string/detail_updater" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/detail_pic_num" />

                        <TextView
                            android:id="@+id/detail_text_pic"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:singleLine="true"
                            android:text="@string/detail_pic_num" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/detail_tag" />

                        <com.zhy.view.flowlayout.TagFlowLayout
                            android:id="@+id/detail_tag_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4">

                        </com.zhy.view.flowlayout.TagFlowLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_simpleMessage_layout"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_btn_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_detail_share_48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/detail_btn_share" />

                <TextView
                    android:id="@+id/detail_btn_collection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_detail_favourite_empty_48dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/detail_btn_collection" />

                <TextView
                    android:id="@+id/detail_btn_download"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_detail_download_48dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/detail_btn_download" />

                <TextView
                    android:id="@+id/detail_btn_read"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_detail_read_48dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/detail_btn_read" />
            </LinearLayout>


            <TextView
                android:id="@+id/detail_text_introduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_btn_layout"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/detail_introduce" />

            <View
                style="@style/Divider.Primary"
                android:layout_below="@id/detail_text_introduce" />

            <TextView
                android:id="@+id/detail_text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/detail_text_introduce"
                android:layout_margin="@dimen/margin_small"
                android:text="上传时间" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/detail_rv_thumb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_text_time">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>