<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:id="@+id/albums_search_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/search_mode"
                    android:textColor="@color/colorAccent" />

                <RadioGroup
                    android:id="@+id/albums_search_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/albums_search_radio_name"
                    >

                    <RadioButton
                        android:id="@+id/albums_search_radio_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/search_mode_name" />

                    <RadioButton
                        android:id="@+id/albums_search_radio_tag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/search_mode_tag" />
                </RadioGroup>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <com.ahao.androidlib.ui.widght.recyclerView.RefreshRecyclerView
            android:id="@+id/albums_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>